# sc-datav

./: .gitignore  AI_CONTEXT.md  ROADMAP.md  vite.config.ts
.github/agents/: roadmap.agent.md
public/model/glb/: server_room.glb  server_room.txt
scripts/: printModelTree.mjs
server/: .env  README.md  pyproject.toml  test_ws_connection.mjs
server/src/: __init__.py  main.py  tcp_server.md  tcp_server.py  ws_manager.py
server/src/data/: __init__.py  chart4_data.py
server/src/models/: __init__.py  chart4.py
server/tests/: __init__.py  test_tcp_client.py
src/: App.tsx
src/pages/DataCenter/: demo.tsx  loading.tsx
src/pages/DataCenter/map/: CameraAutoRecenter.tsx  EntranceReveal.tsx  bar.tsx  base.tsx  bottom.tsx  camera.ts  index.tsx  label.tsx  lights.tsx  materials.ts  scene.tsx  serverroom.tsx  tooltip.tsx
src/pages/DataCenter/panel/: chart1.tsx  chart2.tsx  chart3.tsx  chart4.tsx  chart5.tsx  chart6.tsx  footer.tsx  headder.tsx  index.tsx
src/pages/DataCenter/stores/: dataStore.ts  index.ts
src/pages/DataCenter/theme/: index.ts  palette.ts  tokens.ts
src/services/: types.ts  wsClient.md  wsClient.ts
